2000-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_INIT_PARSE_ARGS): Rename as...
	(_AC_INIT_PARSE_ARGS): this.
	Move the display of help and version strings to...
	(_AC_INIT_HELP, _AC_INIT_VERSION): here.
	(AC_INIT): Adjust.  Also, fix quotation.

2000-03-08  Akim Demaille  <akim@epita.fr>

	Some tests are failing with srcdir != builddir, because they can't
	find config.guess, install-sh etc.
	Reported by Erez Zadok.

	* tests/atspecific.m4 (AT_TEST_MACRO): Set AC_CONFIG_AUX_DIR to
	top_srcdir in configure.in, and pass the value of top_srcdir to
	configure.

2000-03-08  Akim Demaille  <akim@epita.fr>

	* acgeneral.m4 (AC_ARG_ENABLE, AC_ARG_WITH, AC_PATH_PROG,
	AC_PATH_PROGS, AC_PATH_TOOL, AC_CHECK_TOOL, AC_PREFIX_PROGRAM,
	AC_EGREP_CPP, AC_TRY_LINK, AC_COMPILE_CHECK, AC_TRY_RUN_NATIVE):
	Use ifval instead of ifelse.

2000-03-07 Mark Elbrecht <snowball3@bigfoot.com>

	Support absolute DOS-style paths.

	Any character before the colon is accepted because network drives
	can be assigned characters outside the [a-zA-Z] range. DOS-style
	relative paths (?:foo/bar) are also considered absolute for
	Autoconf's purposes since the path '../?:foo/bar' is invalid.

	* acgeneral.m4 (AC_OUTPUT_FILES): Treat DOS-style paths (?:*') as
	absolute.
	(AC_OUTPUT_SUBDIRS): Likewise.
	(AC_PATH_PROG): Make pattern for matching DOS-style paths the same
	as that used in AC_OUTPUT_FILES and AC_OUTPUT_SUBDIRS.

2000-03-06  Akim Demaille  <akim@epita.fr>

	* tests/atspecific.m4 (m4_match): Remove, no longer used.

2000-03-04  Jim Meyering  <meyering@lucent.com>

	* autoheader.sh: Use `rm -f', not just `rm' when removing temporaries.
	Preserve exit status in trap handler.
	Based on suggestions from Paul Eggert.

2000-03-03  Paul Eggert <eggert@twinsun.com>

	Move the quadrigraphs out of the user name space.

	* acgeneral.m4: 's/\@BKL@/@<:@/g', 's/\@BKR@/\@:>@/g',
	's/\@DLR@/\@S|@/g', 's/\@PND@/@%:@/g'.
	* acspecific.m4: Likewise.
	* autoconf.sh: Likewise.
